--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -10,6 +10,7 @@
 <p style="padding-left: 90px;">電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
 <h4 style="padding-left: 30px;">分組:</h4>
 <p style="padding-left: 60px;">利用 Ethercalc 收集各班學員的 Github 帳號與組別, 存入 <a href="https://github.com/mdecourse/studlist/tree/main/2022spring">https://github.com/mdecourse/studlist/tree/main/2022spring</a></p>
+<p style="padding-left: 60px;">各學員若 github 帳號有更動, 可以自行至 <a href="https://github.com/mdecourse/studlist">https://github.com/mdecourse/studlist</a> 倉儲, 以 pull requests 進行修改.</p>
 <p style="padding-left: 60px;">以 2b 為例, 每一大組 8 人, 且分為兩個 4 人小組, 目前可以透過 <a href="http://mde.tw/studlist/2022spring/2b.txt">http://mde.tw/studlist/2022spring/2b.txt</a> 讀取. 且透過 <a href="/downloads/read_data_from_nfulist.py">read_data_from_nfulist.py</a> 可以在近端讀取各班學員的 github 帳號與組別.</p>
 <p style="padding-left: 60px;">目前碰到的問題是:</p>
 <p style="padding-left: 90px;">能不能透過隨機方式自動幫尚未納組的學員分組?</p>
