--- a/content/About.html
+++ b/content/About.html
@@ -108,14 +108,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>cd2022 協同產品設計實習課程導引</h1>
+                <h1>cd2022_guide 協同產品設計實習課程導引</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cd2022 協同產品設計實習課程導引</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cd2022_guide 協同產品設計實習課程導引</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='run.html'>run</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='run.html'>run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='run.html'>Next</a> >> run<br /><h1>About</h1>
-<p>課程倉儲與網站:</p>
+    <div id="tipue_search_content"> <a href='IPv6.html'>Next</a> >> IPv6<br /><h1>About</h1>
+<h4>何謂協同?</h4>
+<p style="padding-left: 30px;">若以拔河為例, "合作" (Cooperation) 的層次在多人參與既定的拔河活動, 過程中有許多傳統的實體集合練習, 最終目的則是能夠在傳統拔河活動中勝出.</p>
+<p style="padding-left: 30px;">在 cd2022 課程的定義下, "協同" (Collaborative) 設計的層次則希望能夠在"合作"的架構下, 納入更多的創新思維, 探討能否讓多人參與拔河活動, 各自在不同地理位置, 能在虛實整合與機電資架構的合成設計下, 讓多人進行一場公平的拔河活動, 且讓夢想成真的一隊得以克敵制勝.</p>
+<h4>課程倉儲與網站:</h4>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecourse/cd2022">https://github.com/mdecourse/cd2022</a></p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
 <h4>Week1:</h4>
@@ -179,7 +182,7 @@ img.add_border {
     (d.head || d.body).appendChild(s);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><br /> <a href='run.html'>Next</a> >> run</div>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><br /> <a href='IPv6.html'>Next</a> >> IPv6</div>
         
     <!-- footer -->
       <div class="container">
