--- a/content/IPv6.html
+++ b/content/IPv6.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='run.html'>run</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li><a href='Grouping.html'>Grouping</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='run.html'>run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace<br /><h1>IPv6</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Grouping.html'>Next</a> >> Grouping<br /><h1>IPv6</h1>
 <p>電腦輔助設計室 <a href="https://github.com/mdecourse/wcm2022/discussions/2">IPv6 網路設定</a></p>
 <p><a href="https://www.tipo.gov.tw/tw/cp-180-219597-bf26c-1.html">智慧財產局學校行政與電算中心篇</a></p>
 <p><a href="https://www.netadmin.com.tw/netadmin/zh-tw/snapshot/484F7B4D900C4BDF988F0D6AAE2A8706">如何避免惡意軟體的侵害</a>?</p>
@@ -147,7 +147,7 @@ img.add_border {
 <p style="padding-left: 30px;">為何不使用 NAT 機制, 而讓電腦輔助設計室中的電腦直接連上外部網路?</p>
 <p style="padding-left: 30px;">使用 IPv6 連網有哪些好處? 有沒有壞處?</p>
 <p style="padding-left: 30px;">如何使用批次檔案完成 IPv6 網路設定, 避開惡意軟體的網路攻擊?</p>
-<p></p><br />About << <a href='About.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
+<p></p><br />About << <a href='About.html'>Previous</a> <a href='Grouping.html'>Next</a> >> Grouping</div>
         
     <!-- footer -->
       <div class="container">
