add uArm Tic-Tat-Toe game

--- a/content/Tic-Tat-Toe.html
+++ b/content/Tic-Tat-Toe.html
@@ -140,9 +140,18 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>Tic-Tat-Toe</h1>
-<p><a href="https://www.universal-robots.com/products/ur10-robot/">UR10e</a> Robot 透過影像辨識與人進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-To</a>e 遊戲:</p>
+<p><a href="https://www.universal-robots.com/products/ur10-robot/">UR10e</a> Robot 透過影像辨識與人進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/e1qtmZxMd6A" title="YouTube video player" width="560"></iframe></p>
-<p><a href="https://mde.tw/cd2022">cd2022</a> 則希望透過 <a href="https://www.ufactory.cc/pages/uarm">uArm</a> robot 搬動 OX 棋子的方式進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-To</a>e 遊戲.</p>
+<p><a href="https://mde.tw/cd2022">cd2022</a> 則希望透過 <a href="https://www.ufactory.cc/pages/uarm">uArm</a> robot 搬動 OX 棋子的方式進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲.</p>
+<h4 style="padding-left: 30px;">Tic-Tat-Toe:</h4>
+<p style="padding-left: 60px;"><a href="https://www.cormerica.com/robot-tic-tac-toe/">https://www.cormerica.com/robot-tic-tac-toe/</a> </p>
+<p style="padding-left: 60px;"><a href="./../downloads/Playing_Tic-Tac-Toe_Using_Genetic_Neural_Network_with_Double_transfer_functions.pdf">Playing_Tic-Tac-Toe_Using_Genetic_Neural_Network_with_Double_transfer_functions.pdf</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eSUk08d5Zjc" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/w5Oftm3l2uQ" title="YouTube video player" width="560"></iframe></p>
+<h4 style="padding-left: 30px;">uArm 資料:</h4>
+<p style="padding-left: 60px;"><a href="https://www.trossenrobotics.com/uarm-swift-pro.aspx">https://www.trossenrobotics.com/uarm-swift-pro.aspx</a> </p>
+<p style="padding-left: 60px;"><a href="https://github.com/uArm-Developer/UArmForArduino">https://github.com/uArm-Developer/UArmForArduino</a> </p>
+<p style="padding-left: 60px;"><a href="https://uarm-developer.github.io/UArmForArduino/">https://uarm-developer.github.io/UArmForArduino/</a> </p>
 <p>且 uArm robot 的零組件要求分別由 Solvespace, NX1980 與 Onshape 執行設計繪圖後轉入 Coppeliasim 場景完成機電資系統模擬.</p>
 <p>其中 uArm 原型零件採用 3D 列印或雷射切割的製造過程可依照 <a href="https://mde.tw/cd2022/content/Realizable.html">Realization</a> 頁面中的模擬系統進行, 並包括齒輪減速機的設計運算與 <a href="https://wokwi.com/arduino/libraries/Servo/Sweep">Arduino 伺服馬達的控制模擬</a>.</p>
 <h4>uArm 零組件:</h4>
