--- a/content/index.html
+++ b/content/index.html
@@ -142,6 +142,7 @@ img.add_border {
 <h4>何謂協同?</h4>
 <p style="padding-left: 30px;">若以拔河為例, "合作" (Cooperation) 的層次在多人參與既定的拔河活動, 過程中有許多傳統的實體集合練習, 最終目的則是能夠在傳統拔河活動中勝出.</p>
 <p style="padding-left: 30px;">在 cd2022 課程的定義下, "協同" (Collaborative) 設計的層次則希望能夠在"合作"的架構下, 納入更多的創新思維, 探討能否讓多人參與拔河活動, 各自在不同地理位置, 能在虛實整合與機電資架構的合成設計下, 讓多人進行一場公平的拔河活動, 且讓夢想成真的一隊得以克敵制勝.</p>
+<p style="padding-left: 30px;"><a href="./../downloads/Collaboration, Coordination, and Cooperation Among Organizations - Establishing the Distinctive Meanings of These Terms Through a Systematic Literature Review.pdf">Collaboration, Coordination, and Cooperation Among Organizations - Establishing the Distinctive Meanings of These Terms Through a Systematic Literature Review.pdf</a></p>
 <h4>課程倉儲與網站:</h4>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecourse/cd2022">https://github.com/mdecourse/cd2022</a></p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
