--- a/content/Grouping.html
+++ b/content/Grouping.html
@@ -143,6 +143,10 @@ img.add_border {
 <p><a href="https://mde.tw/cd2022">cd2022</a> 課程由學員自行分組, 每四人為一小組, 每兩小組組成一大組.</p>
 <p>所有課程指定內容可由各小組組員討論 (每週至少開會一次, 且將小組討論過程與結論放入各小組分組倉儲) 後, 在個人所負責的項目執行完成後, 先納入個人 cd2022 倉儲後, 再依照組序整合至該小組組長的協同倉儲 (例如: 甲班第一大組的第一小組倉儲名稱將為: cd2022ag1-1, 甲班第一大組的第二小組倉儲名稱將為: cd2022ag1-2).</p>
 <p>各大組成員每兩週在上課之前必須至少開會一次, 且將大組討論過程與結論放入各大組分組倉儲後 (例如: 甲班第一大組的倉儲名稱將為: cd2022ag1), 比較並統整各小組所完成的內容後, 將協同設計結果納入各大組的分組倉儲, 且各大組每兩週將利用課程時間進行網際協同分組簡報.</p>
+<h4 style="padding-left: 30px;">問題:</h4>
+<p style="padding-left: 60px;">為什麼需要定期進行分組簡報?</p>
+<p style="padding-left: 60px;"><a href="./../downloads/The Importance of Presentation Skills in Institutions of Higher Learning.pdf">The Importance of Presentation Skills in Institutions of Higher Learning.pdf</a></p>
+<p style="padding-left: 60px;"><a href="./../downloads/The 7 Main Reasons Why People Give Presentations.pdf">The 7 Main Reasons Why People Give Presentations.pdf</a></p>
 <p>以下 Brython 程式可讀取各大組的學員分組資料後, 直接在網頁中列出各學員 cd2022 倉儲與網頁連結、各小組協同倉儲與網頁連結、以及各大組協同倉儲與網頁連結.</p>
 <p>請注意: 各組學員 github 帳號下除建有個人 cd2022 倉儲外, 還必須 fork 大組倉儲 (例如: 甲班第一大組的倉儲名稱將為: cd2022ag1) 並在各大組進行網際協同分組簡報前, 與所屬大組的分組協同倉儲內容保持同步.</p>
 <p><a href="https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">grp_2022.py</a> (<a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">run</a>)</p><br />IPv6 << <a href='IPv6.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
