--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,6 @@
 <h1>About</h1>
+<p>本導引倉儲: <a href="https://github.com/mdecourse/cd2022_guide">https://github.com/mdecourse/cd2022_guide</a></p>
+<p>本導引網站: <a href="https://mde.tw/cd2022_guide">https://mde.tw/cd2022_guide</a></p>
 <p>課程倉儲與網站:</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecourse/cd2022">https://github.com/mdecourse/cd2022</a></p>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2022">https://mde.tw/cd2022</a></p>
@@ -19,6 +21,8 @@
 <p style="padding-left: 60px;">協同產品設計實習課程將會用到 NX1980, 若在電腦輔助設計室, 可以直接從 <a href="http://wcm.cycu.org:88/">http://wcm.cycu.org:88/</a> 下載.</p>
 <h4 style="padding-left: 30px;">讀取各學員每週工作內容:</h4>
 <p style="padding-left: 60px;">當完成分組後, 且各學員已經透過各自 Github 帳號下的 cd2022 倉儲開始執行課程任務後, 能否透過程式逐日或逐週讀取各學員的工作內容?</p>
+<h4 style="padding-left: 30px;">課程第一階段要求:</h4>
+<p style="padding-left: 60px;">每一個大組都要設法提供 solvespace, NX1980 格式的 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">uarm</a> (Onshape 格式) 機械手臂零組件.</p>
 <div id="disqus_thread"></div>
 <script>
     /**
