--- a/content/Assignments.html
+++ b/content/Assignments.html
@@ -140,32 +140,42 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Grouping << <a href='Grouping.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace<br /><h1>Assignments</h1>
+<p>協同產品設計實習課程學員評分要點:</p>
+<p>sustainable (永續):</p>
+<p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
+<p style="padding-left: 30px;">2a : of, relating to, or being a method of harvesting (獲取成果) or using a resource (運用資源) so that the resource (該資源) is not depleted (不致枯竭) or permanently damaged (永久損壞).</p>
+<p style="padding-left: 30px;">2b : of or relating to a lifestyle involving the use of sustainable methods (採取永續的生活方式)</p>
+<p style="padding-left: 30px;">在 cd2022 課程 sustainable 代表所採行的解題方式, <span style="background-color: #ffff99;">為所有分組組員認可是當下環境中, 最佳處理方式與流程, 可作為其他分組學習並能在課程各階段任務中延續使用</span>.</p>
+<p>resilience (應變能力):</p>
+<p style="padding-left: 30px;">1 : the capability of a strained body (承受應變物體) to recover its size and shape after deformation caused especially by compressive stress (尤指受到壓縮應力)</p>
+<p style="padding-left: 30px;">2 : an ability to recover (回復能力) from or adjust easily (易於調適) to misfortune or change (面臨意外情境或變化)</p>
+<p style="padding-left: 30px;">在 cd2022 課程 resilience 代表<span style="background-color: #ffff99;">各分組成員需具備一定的應變處理能力</span>.</p>
 <p>20220302 工作流程:</p>
 <ol>
 <li>將 cadlab 網路連線接到系 backbone (使用純 IPv6 設定後, 為了連結到 IPv4 網站, 必須透過雙協定支援的 proxy server)</li>
 <li>將兩個隨身碟放入電腦 USB 3.0 插槽 (與 2.0 速度差 10 倍)</li>
 <li>啟動電腦</li>
 <li>在 Windows 10 尚未啟動防毒軟體之前, 以系統管理員身分執行 1_ipv6_network_setup.bat (為了避開蠕蟲惡意的網路攻擊)</li>
-<li>批次檔案將會開啟 Firefox 連結到 cd2022 課程倉儲</li>
+<li>批次檔案將會開啟 Firefox 連結到 cd2022 課程網頁與倉儲</li>
 <li>希望修改 cmsimde 倉儲內容, 以 git clone --recurse-submodules git@github.com:mdecourse/cmsimde.git 取下倉儲資料時, 電腦回報沒有 correct access rights</li>
-<li>上個步驟表示 putty session github.com 並沒有設定, 帶出上週在 cdb 從 registry 匯出的 2022_cdb.reg, 直接以滑鼠點擊執行後, 再次執行 git clone --recurse-submodules git@github.com:mdecourse/cmsimde.git 取下 cmsimde 倉儲</li>
-<li>但 cmsimde 無法直接產生靜態網頁與動態網頁, 因此擬以 git submodule add 透過另一個 cmsimde_site 倉儲進行修改後, 將資料回應至 cmsimde.</li>
-<li>需要新增 github 倉儲, 因此登入 github (能不能直接在近端使用 ssh 與程式建立 github 倉儲?)</li>
-<li>因為要取 2a 學員 github 帳號, 以 ssh 登入 17 電腦, 啟動 ethercalc</li>
-<li>由於必須從教務主機取得 2a 學員學號, 經由 heroku 主機取得 <a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True">https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True</a></li>
+<li>上個步驟表示 putty session github.com 並沒有設定, 可帶出上週在 cdb 從 registry 匯出的 2022_cdb.reg, 直接以滑鼠點擊執行後, 再次執行 git clone --recurse-submodules git@github.com:mdecourse/cmsimde.git 取下 cmsimde 倉儲</li>
+<li>但 cmsimde 無法直接產生靜態網頁與動態網頁, 因此以 cmsimde_site 倉儲納入 cmsimde 程式碼, 進行修改後, 將資料回應至 cmsimde</li>
+<li>需要新增 github 倉儲, 因此必須登入 github.com 建立 cmsimde_site 倉儲 (能不能直接在近端使用 ssh 與程式建立 github 倉儲?)</li>
+<li>因為要取 2a 學員 github 帳號, 以 ssh 登入 .17 電腦, 啟動 ethercalc</li>
+<li>由於必須從教務主機取得 2a 學員學號, 經由 heroku 雲端主機取得 <a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True">https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True</a></li>
 <li>連接至 cd2022 gitter, 告知擷取 2a github 帳號的 ethercalc 表單連結</li>
-<li>cd2022 要求每一學員必須在 github 帳號下建立 cd2022 倉儲與網頁, 並且由各小組組長建立 cd2022ag1-1 (為第一組第一小組), 且每位學員在 cd2022ag1-1 都擁有 git push 權限, 或採 pull requests 修改小組分組倉儲內容.</li>
-<li>而每一大組的組長負責建立 cd2022ag1 (為 2a 第一大組) 後, 各大組學員對分組倉儲可以擁有 git push 權限, 或各學員採 pull requests 修改大分組倉儲內容.</li>
+<li>cd2022 要求每一學員必須在 github 帳號下建立 cd2022 倉儲與網頁, 並且由各小組組長建立 cd2022ag1-1 (為第一組第一小組), 且每位學員在 cd2022ag1-1 都擁有 git push 權限, 或採 pull requests 方式修改小組分組倉儲內容</li>
+<li>而每一大組的組長負責建立 cd2022ag1 (為 2a 第一大組為例) 後, 各大組學員對分組倉儲可以擁有 git push 權限, 或各學員採 pull requests 方式修改大分組倉儲內容</li>
 <li>各學員在每週會議後, 個人所負責完成的內容或簡報必須先放到個人的 cd2022 倉儲後, 再透過小組協同倉儲練習如何解決組員間提交內容的衝突後, 再整合至各大組的協同倉儲.</li>
-<li>接著要從 ethercalc 取下 2a 學員的 github 帳號與大組分組資料 (能不能用程式協助?)</li>
+<li>接著要從 ethercalc 取下 2a 學員的 github 帳號與大組分組資料, 並存入 studlist 倉儲 (能不能用程式協助?)</li>
 </ol>
 <p>2a w2 assignments:</p>
-<p>1. 在個人帳號下, 使用最新版的 cmsimde 建立 cd2022:</p>
+<p>1. 在個人帳號下, 使用<a href="https://github.com/mdecourse/cmsimde/tree/9efabe7ab2fc4952f9255cf30b3856695514b3ee">最新版的 cmsimde</a> 建立 cd2022:</p>
 <p style="padding-left: 30px;">以子模組的方式建立倉儲:</p>
-<p style="padding-left: 30px;">git submodule add https://github.com/mdecourse/cmsimde.git cmsimde</p>
+<p style="padding-left: 60px;">git submodule add https://github.com/mdecourse/cmsimde.git cmsimde</p>
 <p style="padding-left: 30px;">或者直接將 cmsimde 倉儲作為 cmsimde 目錄:</p>
-<p style="padding-left: 30px;">git clone --recurse-submodules https://github.com/mdecourse/cmsimde.git</p>
-<p style="padding-left: 30px;">然後再將沒有 git 資料的 cmsimde 目錄放到個人倉儲.</p>
+<p style="padding-left: 60px;">git clone --recurse-submodules https://github.com/mdecourse/cmsimde.git</p>
+<p style="padding-left: 30px;">然後再將沒有 git 版本資料的 cmsimde 目錄放到個人倉儲.</p>
 <p>2. 根據 <a href="https://mde.tw/cd2022_guide/content/Grouping.html">https://mde.tw/cd2022_guide/content/Grouping.html</a>  中的 2b 程式執行, 配合 <a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a> 修改為能夠直接在頁面顯示各組員的 cd2022 倉儲與網頁連結, 以及各學員協同大分組倉儲與網頁連結 (例如: cd2022ag1).<br/><br/>3. 能否透過 github api 程式 (也可以逐一進入各班組員 github 帳號, 以手動查驗後, 以表格列出結果), 列出 w2 階段各組員帳號下 cd2022 與 cd2022ag1 (以 2a 第一組組員為例) 是否符合陽春的 cmsimde_site 內容. (例如: 透過 <a href="https://github.com/PyGithub/PyGithub">https://github.com/PyGithub/PyGithub</a>)</p>
 <p></p><br />Grouping << <a href='Grouping.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
         
