--- a/content/Assignments.html
+++ b/content/Assignments.html
@@ -177,6 +177,8 @@ img.add_border {
 <p style="padding-left: 60px;">git clone --recurse-submodules https://github.com/mdecourse/cmsimde.git</p>
 <p style="padding-left: 30px;">然後再將沒有 git 版本資料的 cmsimde 目錄放到個人倉儲.</p>
 <p>2. 根據 <a href="https://mde.tw/cd2022_guide/content/Grouping.html">https://mde.tw/cd2022_guide/content/Grouping.html</a>  中的 2b 程式執行, 配合 <a href="https://mde.tw/studlist/2022spring/2a.txt">https://mde.tw/studlist/2022spring/2a.txt</a> 修改為能夠直接在頁面顯示各組員的 cd2022 倉儲與網頁連結, 以及各學員協同大分組倉儲與網頁連結 (例如: cd2022ag1).<br/><br/>3. 能否透過 github api 程式 (也可以逐一進入各班組員 github 帳號, 以手動查驗後, 以表格列出結果), 列出 w2 階段各組員帳號下 cd2022 與 cd2022ag1 (以 2a 第一組組員為例) 是否符合陽春的 cmsimde_site 內容. (例如: 透過 <a href="https://github.com/PyGithub/PyGithub">https://github.com/PyGithub/PyGithub</a>)</p>
+<h4>2bw2:</h4>
+<p>建立個人 cd2022 與 cd2022bg1 時, 可以用 import <a href="https://github.com/mdecourse/cmsimde_site">cmsimde_site</a> 倉儲, 或 git submodule add 或直接將 cmsimde 下載 <a href="https://github.com/mdecourse/cmsimde/archive/refs/heads/master.zip">https://github.com/mdecourse/cmsimde/archive/refs/heads/master.zip</a> 後解開為倉儲下的 cmsimde 目錄, 之後再將 up_dir 內容複製到倉儲根目錄. 當評分檢查時, 各組需繳交全班各學員是否達成任務要求.</p>
 <p></p><br />Grouping << <a href='Grouping.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
         
     <!-- footer -->
