加入 NX1980 頁面中的教學影片連結, 並說明近端下載檔案的功能與適用情境

--- a/config/content.htm
+++ b/config/content.htm
@@ -116,12 +116,21 @@
 <h4>NX1980 參考頁面:</h4>
 <p style="padding-left: 30px;"><a href="https://mde.tw/cd2022/content/NX1980.html">https://mde.tw/cd2022/content/NX1980.html</a></p>
 <p style="padding-left: 30px;">假如在系上網段, 可直接從 <a href="http://wcm.cycu.org:88">http://wcm.cycu.org:88</a> 下載 <a href="http://wcm.cycu.org:88/NX1980_cd2022.7z">http://wcm.cycu.org:88/NX1980_cd2022.7z</a>.</p>
+<p style="padding-left: 30px;"><a href="http://wcm.cycu.org:88">http://wcm.cycu.org:88</a> 中目前有三個與可攜 Python 程式有關的檔案, 有何差別, 建立的目的為何?</p>
+<p style="padding-left: 60px;"><span style="background-color: #ffff99;">請注意: 以下的 .7z 檔案下載, 只允許在系上網段上下載</span>.</p>
+<p style="padding-left: 60px;"><a href="http://wcm.cycu.org:88/compile_copsim_cd2022.7z">compile_copsim_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB, 包含除了 NX1980 之外的所有課程相關可攜程式套件, 是專門為 <a href="https://mde.tw/cd2022">cd2022</a> 課程學員打造的套件). </p>
+<p style="padding-left: 60px;"><a href="http://wcm.cycu.org:88/portable_python_wcm2022.7z">portable_python_wcm2022.7z</a> (file size: 513 MB, extracted size: 17.3 G, 這是專門為 <a href="https://mde.tw/wcm2022">wcm2022</a> 課程打造的可攜程式套件, 適合選修學員下載後在任何 Windows 10 中以隨身碟啟動後操作)</p>
+<p style="padding-left: 60px;"><a href="http://wcm.cycu.org:88/drive.7z">drive.7z</a> (file size: 2.6 MB, extracted size: 10 MB, 只包含 PUTTY, tcc, wscite 與 tmp 目錄, 採用 Hybrid 方式設定, 可與目前電腦輔助設計室中 SSD 硬碟所安裝的 Python 3.9.5 與 <a href="https://git-scm.com/download/win">Portablegit</a> 結合, 使用者只需自行設定啟動後的 home_ipv6 目錄與 home_ipv6/Desktop 目錄後即可以最輕薄便捷的方式將 SSH key 存入隨身碟, 並將個人與分組倉儲存入隨身碟啟動後的 tmp 目錄進行操作).</p>
 <h4 style="padding-left: 30px;">問題:</h4>
 <p style="padding-left: 60px;"><a href="http://wcm.cycu.org:88">http://wcm.cycu.org:88</a> 是如何建置的? (採純 IPv6 設定, 且只允許特定網段下載)</p>
 <p style="padding-left: 60px;">可攜 NX1980 是如何建立的?</p>
 <p style="padding-left: 60px;">如何讓 NX1980 認證伺服器能夠 IPv6 相容?</p>
 <p style="padding-left: 60px;">如何安裝 NX1980 認證伺服器?</p>
-<h1>Onshape</h1>
+<p style="padding-left: 60px;">如何學習利用 NX1980 進行 3D 零組件設計繪圖?</p>
+<p style="padding-left: 90px;"><a href="https://www.youtube.com/watch?v=GUaa97tALxE&amp;list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl">NX1855-1919 零組件設計繪圖</a>教學影片</p>
+<p style="padding-left: 120px;">此一系列教學影片共有 38 個影片檔, 請各大組學員分別認領五個教學影片後, 以 Wink 製作教學影片後, 先將影片放入各自的 cd2022 網站中的 NX1980 H1 頁面中, 然後再整合至各小組與大組的協同網站中.</p>
+<p style="padding-left: 120px;">有關電腦輔助設計室 IPv6 網路設定流程, 可以利用手機參考<a href="https://mde.tw/wcm2022_guide/content/IPv6%20setup.html">設定教學</a>後, 利用隨身碟中的<a href="https://github.com/mdecourse/wcm2022/discussions/2">批次檔案</a>進行設定.</p>
+<p style="padding-left: 120px;">此階段的 NX1980 uArm 機械手臂零組件繪圖目的, 希望能以 NX1980 繪製 uArm (<a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshpae 中的 uArm 組立檔</a>, 使用者可以在手機中安裝 Onshpe App (<a href="https://play.google.com/store/apps/details?id=com.onshape.app">Android</a>, <a href="https://apps.apple.com/us/app/onshape-3d-cad/id923421284">iPhone</a>) 後開啟 uArm 組立檔)</p><h1>Onshape</h1>
 <p>以 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm robot</a>. (並未自行繪製零組件而是從 <a href="/downloads/uArmSwiftPro_UP1300_3D.STEP">uArmSwiftPro_UP1300_3D.STEP</a> import)</p>
 <h1>Tic-Tat-Toe</h1>
 <p><a href="https://www.universal-robots.com/products/ur10-robot/">UR10e</a> Robot 透過影像辨識與人進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲:</p>
