--- a/content/Pull requests.html
+++ b/content/Pull requests.html
@@ -2,7 +2,7 @@
         <head>
         <title>CD_Guide</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,25 +139,32 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>Tic-Tat-Toe</h1>
-<p><a href="https://www.universal-robots.com/products/ur10-robot/">UR10e</a> Robot 透過影像辨識與人進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲:</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/e1qtmZxMd6A" title="YouTube video player" width="560"></iframe></p>
-<p><a href="https://mde.tw/cd2022">cd2022</a> 則希望透過 <a href="https://www.ufactory.cc/pages/uarm">uArm</a> robot 搬動 OX 棋子的方式進行 <a href="https://en.wikipedia.org/wiki/Tic-tac-toe">Tic-Tat-Toe</a> 遊戲.</p>
-<h4 style="padding-left: 30px;">Tic-Tat-Toe:</h4>
-<p style="padding-left: 60px;"><a href="https://www.cormerica.com/robot-tic-tac-toe/">https://www.cormerica.com/robot-tic-tac-toe/</a></p>
-<p style="padding-left: 60px;"><a href="./../downloads/Playing_Tic-Tac-Toe_Using_Genetic_Neural_Network_with_Double_transfer_functions.pdf">Playing_Tic-Tac-Toe_Using_Genetic_Neural_Network_with_Double_transfer_functions.pdf</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/eSUk08d5Zjc" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/w5Oftm3l2uQ" title="YouTube video player" width="560"></iframe></p>
-<h4 style="padding-left: 30px;">uArm 資料:</h4>
-<p style="padding-left: 60px;"><a href="https://www.trossenrobotics.com/uarm-swift-pro.aspx">https://www.trossenrobotics.com/uarm-swift-pro.aspx</a></p>
-<p style="padding-left: 60px;"><a href="https://github.com/uArm-Developer/UArmForArduino">https://github.com/uArm-Developer/UArmForArduino</a></p>
-<p style="padding-left: 60px;"><a href="https://uarm-developer.github.io/UArmForArduino/">https://uarm-developer.github.io/UArmForArduino/</a></p>
-<p>且 uArm robot 的零組件要求分別由 Solvespace, NX1980 與 Onshape 執行設計繪圖後轉入 Coppeliasim 場景完成機電資系統模擬.</p>
-<p>其中 uArm 原型零件採用 3D 列印或雷射切割的製造過程可依照 <a href="https://mde.tw/cd2022/content/Realizable.html">Realization</a> 頁面中的模擬系統進行, 並包括齒輪減速機的設計運算與 <a href="https://wokwi.com/arduino/libraries/Servo/Sweep">Arduino 伺服馬達的控制模擬</a>.</p>
-<h4>uArm 零組件:</h4>
-<p style="padding-left: 30px;">以 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm robot</a>. (並未自行繪製零組件而是從 <a href="./../downloads/uArmSwiftPro_UP1300_3D.STEP">uArmSwiftPro_UP1300_3D.STEP</a> import)</p>
-<p></p>
-<br />Onshape << <a href='Onshape.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
+    <div id="tipue_search_content">Grouping << <a href='Grouping.html'>Previous</a> <a href='Assignments.html'>Next</a> >> Assignments<br /><h1>Pull requests</h1>
+<p>利用 wcm2022 帳號修改 <a href="https://github.com/mdecourse/studlist">https://github.com/mdecourse/studlist</a> 中的組別資料, 作為 pull request 範例.</p>
+<p>動態網頁嵌入 Wink 影片的參考 html: <a href="./../downloads/2a_w3_studlist_pull_requests_wink_html.txt">2a_w3_studlist_pull_requests_wink_html.txt</a></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
+<source src="./../downloads/2a_w3_studlist_pull_requests.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div><br />Grouping << <a href='Grouping.html'>Previous</a> <a href='Assignments.html'>Next</a> >> Assignments</div>
         
     <!-- footer -->
       <div class="container">
